SERVER-71029 Update slow SessionWorkflow log criteria